--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,5 +1,12 @@
 <article class="product">
   <header>
+
+    <% unless product.quantity > 0 %>
+      <div class="alert alert-danger badge">
+        Sold Out
+      </div>
+    <% end %>
+
     <%= link_to product do %>
       <%= image_tag product.image.thumb, alt: product.name %>
       <h4><%= product.name %></h4>
