Add logic and styling to display num of products and categories on admin dashboard

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,32 @@ body {
 form.button_to {
   display: inline;
 }
+
+.dashboard-header {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+
+  .dashboard-header-text {
+    flex-direction: column;
+  }
+}
+
+.dashboard-table {
+  margin: 5rem 5rem 5rem 5rem;
+}
+
+.dashboard-centering {
+  display: flex;
+}
+
+.dashboard-table-heading {
+  text-align: center;
+  font-size: 30px;
+}
+
+.dashboard-table-data {
+  text-align: center;
+  font-size: 25px;
+  font-weight: bold;
+}
