Set up categories list and create new category functionality

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,3 +44,11 @@ form.button_to {
   font-size: 25px;
   font-weight: bold;
 }
+
+.admin-categories-subheading {
+  margin-top: 4rem;
+}
+
+.admin-categories-list {
+  font-weight: bold;
+}
